bpo-44849: Fix os.set_inheritable() on FreeBSD 14 with O_PATH (GH-27623)

Fix the os.set_inheritable() function on FreeBSD 14 for file
descriptor opened with the O_PATH flag: ignore the EBADF error on
ioctl(), fallback on the fcntl() implementation.